2009-05-21  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (startServices): Don't wait for X11 socket if no head_start
	is defined,
	* bin/mudur.py (UI): Make color characters a dictionary,
	* bin/mudur.py: Refactor messages, drop a useless information message
	about udev,
	* bin/mudur.py (localMount): Drop unreachable code in localMount,
	* bin/service.py: bus variable is not used, fix translation logic.

2009-05-20  Bahadır Kandemir <bahadir@pardus.org.tr>
	* bin/mudur.py: Do nothing if device is unplugged.

2009-05-20  Onur Küçük <onur@pardus.org.tr>
	* bin/mudur.py: Add easy colorize support
	* bin/mudur.py: Add color to network and hostname info

2009-05-18  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Revert /proc/modules check,
	* bin/mudur.py (waitBus): Don't flood mudur.log, just write the waited
	time once upon exit.

2009-05-17  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Use touch from pardus.shellutils.

2009-05-17  Fatih Aşıcı <fatih@pardus.org.tr>
	* bin/mudur.py: Get back the kernel version parsing. It is used by
	autoloadModules().
	* bin/mudur.py: Change default language to "en".

2009-05-16  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (Config.__init__): Remove unused kernel version parsing.
	Should be implemented in pardus-python if mudur needs it one day.
	* bin/mudur.py: Python functions return None by default, no need to
	explicitly return it.
	* bin/mudur.py: Make /forcefsck detection a one-liner.
	* bin/mudur.py: Trigger udev for failed events only if /dev/.udev/failed
	exists,
	* bin/mudur.py (startNetwork): Remove the bus parameter as it wasn't used
	at all in the function,
	* bin/mudur.py: Use get_kernel_option from pardus.sysutils which carefully
	parses /proc/cmdline and returns an appropriate dictionary, adapt the
	relevant parts of mudur to handle it.

2009-05-15  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (localMount): Remove noshm as mount don't have an option
	like that.
